apps/base/pihole/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole 
  labels:
    local-access: "true"
