apps/base/pihole/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-route
  namespace: pihole
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: ingress-traefik
  hostnames:
  - "pihole.flux.techbabette.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: pihole-https
      port: 80
