apps/base/pihole/pihole.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: pihole
  namespace: pihole
  annotations:
    cert-manager.io/cluster-issuer: cloudflare 
spec:
  tls:
  - hosts:
    - pihole.flux.techbabette.com
    secretName: pihole-cert 
  rules:
  - host: pihole.flux.techbabette.com
    http:
      paths:
      - backend:
          service:
            name: pihole-https
            port:
              number: 80
        path: /
        pathType: Prefix 
status:
  loadBalancer: {}
